--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<div id="loginBox">
+  <input id="email" type="email" placeholder="E-post">
+  <input id="password" type="password" placeholder="Passord">
+
+  <button id="signupBtn">Opprett konto</button>
+  <button id="loginBtn">Logg inn</button>
+
+  <p id="status"></p>
+</div>
+
+
 <!DOCTYPE html>
 <html lang="no">
 <head>
