--- a/index.html
+++ b/index.html
@@ -250,6 +250,6 @@ const SEKTORER = ["Energi", "Finans", "Industri", "Konsumvarer", "Kommunikasjon"
     </div>
     <button id="premium-dev-toggle" class="premium-dev-toggle">Premium: OFF</button>
 
-<script src="static/js/app.js"></script>
+<script type="module" src="./auth.js"></script>
 </body>
 </html>
